--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <h1>GINEAGRO</h1>
     <div>
       <a href="#servicos"><button>Serviços</button></a>
-      <a href="#contatos"><button>Contato</button></a>
+      <a href="forms.html"><button>Contratar</button></a>
       <a href="#depoimentos"><button>Depoimentos</button></a>
     </div>
   </header>
